# runtime-refletion

./: CMakeLists.txt  main.cpp
src/: class_register.cpp  class_register.hpp  object.cpp  object.hpp  register.cpp  register.hpp  register_entity.cpp  register_entity.hpp  register_helper.cpp  register_helper.hpp  registration.cpp  registration.hpp  type_descriptor.cpp  type_descriptor.hpp  type_resolver.cpp  type_resolver.hpp
src/type/: template_string.cpp  template_string.hpp  type_info.cpp  type_info.hpp  utils.cpp  utils.hpp
src/utils/: singleton.h
